# parallel-programming2026

./: MatrixB.txt
Lab1/: README.md  Source.cpp  generate_matrix.py  new.txt  paral.py  result.txt  Отчет.txt
lab2/: CMakeLists.txt  README.md  Source.cpp  experiments.csv  test.py  Инструкция.txt  Отчет.txt
lab3/: CMakeLists.txt  README.md  Source.cpp  experiments_mpi.csv
lab4/: README.md  Source.cu  create_table_cuda.py  test.py
lab5/: README.md  SLURM  Source.cpp  create_table.py  generate_matrix.py  results_table.txt  run_complete.slurm  test.py
